# calendar_api_exploration

./: .gitignore  AGENTS.md  README.md  cli  google_calendar.py  graph_calendar.py  ics_reader.py  pyproject.toml
infra/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra_google/: create_oauth_client.sh  main.tf  variables.tf
